2021-08-30  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/libpoke.h: Fix the comment of `pk_call`.

2021-08-30  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pkl-gen.c (pkl_gen_ps_type_integral): Fix argument of
	MKTYI instruction to be signed integer.
	* libpoke/pvm-val.c (pvm_make_exception): Fix args of
	`pvm_make_integral_type` invocation.
	* libpoke/pvm.jitter (time): Likewise.

2021-08-02  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/libpoke.h: Add missing doc for pk_compile_expression.

2021-07-12  Fangrui Song  <i@maskray.me>

	* doc/poke.texi: Fix a couple of code errors in examples.

2021-07-06  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pkl-typify.c (pkl_typify1_ps_cast): Make cast error
	messages more helpful.

2021-07-04  Guillermo E. Martinez  <guillermo.e.martinez@oracle.com>

	* doc/poke.texi (Decode-Compute-Encode): Fix `double_number`
	function: s/int/unsigned char/ for bytes.

2021-06-06  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pkl-gen.c (pkl_gen_pr_type_function): Add comment.
	(pkl_gen_pr_type_array): Save computed closure for printer in
	AST node.
	(pkl_gen_pr_type_struct): Likewise.
	* libpoke/pkl-gen.pks (print_boffset): Use escape sequence in string
	literal to make RAS happy.
	(struct_printer): s/struct_type/@struct_type/.

2021-06-05  Jose E. Marchesi  <jemarch@gnu.org>

	* configure.ac: Update for 1.3.
	* NEWS: Likewise.
	* doc/gendocs_template: Likewise.

2021-05-31  Luca Saiu  <positron@gnu.org>

	* cfg.mk (gl_public_submodule_commit): Define as empty.  Update
	comment.

2021-05-26  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pvm.jitter (wrapped-functions): Add std string functions.

2021-05-23  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pkl-gen.pks (struct_constructor): s/uint<64>/ulong<64>.
	* libpoke/pvm-val.c (pvm_make_int): Add assertion for `size` argument.
	(pvm_make_uint): Likewise.
	(pvm_make_long): Likewise.
	(pvm_make_ulong): Likewise.
